--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+h1{
+  color: rgb(0, 255, 21);
+  background-color: #282c34;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
